package org.dni;

public class App {
    public static void main(String[] args) {
        System.out.println("Hello world!");
    }
}