@startuml
'https://plantuml.com/sequence-diagram

App ---> Dni
Dni ---> TablaAsignacion

class App {
    {static}+main(args:String[]):void
}

class Dni{
    -dni:String
    -{static}tabla:TablaAsignacion
    --
    +Dni()
    +getDni():String
    +setDni(String):void
    +toString():String
    +isDniNumero(String):boolean
    +extraerParteNumericaDni():String
    +extraerParteAlfabeticaDni():String
    +obtenerLetra():String
    +checkLetra():boolean
    +checkDni():boolean
    +checkNumeroDni():boolean
    -checkLongitudNumDni():boolean
}

class TablaAsignacion{
    -char[] letras
    --
    +TablaAsignacion()
    +getLetra(int):char
    +letraPermitida(char):boolean
    +calcularLetra(String):char

}

@enduml